<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg" >
    
    <!-- 首页 -->
    <LinearLayout
	    android:id="@+id/main"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
	    
        <!-- 标题条 -->
	    <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_gravity="top"
	    	android:gravity="center_vertical"
	    	android:orientation="horizontal"
	    	android:background="@color/title_bg"
	    	>
			<ImageButton 
			    android:id="@+id/btnBack"
			    android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:background="@drawable/btn_title_bg"
	    		android:src="@drawable/btn_back"
	    		android:onClick="doClick"
			    />
	        <TextView
	            android:id="@+id/title"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content"
			    android:text="@string/setting_connect" 
			    android:textColor="@color/title"
			    android:textSize="@dimen/text_big"
			    android:gravity="center"
			    android:layout_weight="1"/>
			<ImageButton 
			    android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:background="@drawable/btn_title_bg"
			    />
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="@dimen/padding"
	        android:background="@drawable/wifi_off"
	        android:textColor="@color/text_default"
	        android:text="@string/info_not_connect"
	        android:textSize="@dimen/text_middle"
	        android:gravity="center_horizontal|bottom"
	        android:layout_gravity="center"
	        />
	    
	    <!-- 列表 -->
	    <ListView
	        android:id="@+id/listView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/padding"
			android:cacheColorHint="#00000000" 
			android:divider="@drawable/line_black"
			>
	    </ListView>
	    
	    <!-- 菜单列表 -->
	    <Button
	        android:id="@+id/btnScan"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/padding_middle"
	        android:layout_marginRight="@dimen/padding_middle"
	        android:layout_marginBottom="@dimen/padding_middle"
	        android:paddingBottom="@dimen/padding_middle"
	        android:background="@drawable/btn_bg"
	        android:textColor="@color/text_default"
	        android:text="@string/setting_scan"
	        android:textSize="@dimen/text"
	        android:onClick="doClick"
	        />
	    
	    <Button
	        android:id="@+id/btnAutoScan"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/padding_middle"
	        android:layout_marginRight="@dimen/padding_middle"
	        android:layout_marginBottom="@dimen/padding_middle"
	        android:paddingBottom="@dimen/padding_middle"
	        android:background="@drawable/btn_bg"
	        android:textColor="@color/text_default"
	        android:text="@string/setting_auto_scan"
	        android:textSize="@dimen/text"
	        android:onClick="doClick"
	        />
 
	</LinearLayout>

</FrameLayout>